2002-06-10  wakaba <w@suika.fam.cx>

	* Entity.pm (force_mime_entity): New option.
	* Header.pm (_item_match): -by => 'ns': New option.
	* Partial.pm: New module.

2002-06-09  wakaba <w@suika.fam.cx>

	* Entity.pm:
	- (stringify): Minimumize MIME charset name when MIME'izing.
	- (mime-entity): New 'format' type.
	- (default_media_subtype): New option.  Now 'default_media_type'
	is used for only (narrower meaning of) media type.
	- (content_type): See 'default_media_type' and
	'default_media_subtype'.  (Was hardcoded as 'text/plain'.)
	- (option): '-resucrive': new option.
	* Header.pm (parse, parse_array): Don't discard invalid
	line (non-'field' line).  (Treat as "X-Unknown" field.)

2002-06-01  wakaba <w@suika.fam.cx>

	* Entity.pm (_encode_body): Some bug fixes and
	better support of CT/CTE/charset.
	(_parse_value): Passes options 'body_default_charset'
	and 'body_default_charset_input' and parameter
	'header' to body class.
	* Util.pm (encode_body_string, encode_header_string):
	Returns minimum charset name if available.

2002-05-30  wakaba <w@suika.fam.cx>

	* Entity.pm (_encode_body): Checks charset name
	to decide CTE.

2002-05-29  wakaba <w@suika.fam.cx>

	* Entity.pm:
	- (%ENCODE, %DECODE): Removed.  (Moved to Message::MIME::Encoding)
	- Uses \x0D\x0A instead of \n.  (Temporary.  `linebreak-strict'
	and related options should be implemented /strictly/.)
	- (_encode_body): Checks media type to choose CTE.
	- (accept_coderange): New option.
	- (body_default_media_type, body_default_charset): Likewise.
	- (fill_ct): Likewise.
	- Uses %Message::Header::NS_phname2uri instead of direct
	access to namespace definition package.
	- (content_type): Returns (type, subtype) list when wantarray'ed.
	- (media_type): New method.  (Alias of content_type)
	* Header.pm (_replace_hash_shift): Checks namespace of field name.

2002-05-26  wakaba <w@suika.fam.cx>

	* Header.pm (url_mailto_safe): Removed.
	(Moved to Message::Header::RFC822.)
	
	* Makefile: New file.
	