@@ -1,3 +1,8 @@
+2002-06-11  wakaba <w@suika.fam.cx>
+
+	* Header.pm (_item_match): Bug fix of "-by => 'ns'".
+	* Partial.pm (reassembly): New function.
+
 2002-06-10  wakaba <w@suika.fam.cx>
 
 	* Entity.pm (force_mime_entity): New option.
